[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "secretlounge-ng"
version = "1.9"
authors = [{ name = "sfan5" }]
description = "a bot to make an anonymous group chat on Telegram"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "pyTelegramBotAPI>=4.29.1",
  "pyYAML>=6.0",
  'crypt-r; python_version>"3.11"',
  "tensorflow>=2.20.0",
]

[project.urls]
"Homepage" = "https://github.com/secretlounge/secretlounge-ng"

[tool.setuptools]
packages = ["secretlounge_ng"]
